<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/color"
        android:title="@string/menu_item_color"
        android:icon="@drawable/ic_palette_24dp"
        >
    </item><item
        android:id="@+id/line_width"
        android:title="@string/menu_item_line_width"
        android:icon="@drawable/ic_baseline_brush_24"
        >
    </item>
    <item
        android:id="@+id/delete_drawing"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/ic_delete_24dp"
        >
    </item>
    <item
        android:id="@+id/save"
        android:title="@string/menu_item_save"
        android:icon="@drawable/ic_save_24dp"
        >
    </item>
    <item
        android:id="@+id/print"
        android:title="@string/menu_item_print"
        android:icon="@drawable/ic_print_24dp"
        >
    </item>
</menu>