<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorDialogGridLayout"
    android:columnCount="2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SeekBar
        android:id="@+id/alphaSeekBar"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>

    <TextView
        android:id="@+id/alphaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/label_alpha"
        android:layout_gravity="right|center_vertical"
        />
    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>

    <TextView
        android:id="@+id/redTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/label_red"
        android:layout_gravity="right|center_vertical"/>
    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>

    <TextView
        android:id="@+id/greenTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/label_green"
        android:layout_gravity="right|center_vertical"/>
    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_width="178dp"
        android:layout_height="39dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="255"/>


    <TextView
        android:id="@+id/blueTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/label_blue"
        android:layout_gravity="right|center_vertical"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/colorView"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"/>
</GridLayout>